# TruncatedNormal

./: CMakeLists.txt  README.md  build.sh
include/: dist.h
src/: dist.cpp  main.cpp
