cmake_minimum_required(VERSION 2.8.12)
project(truncated_normal)
SET(CMAKE_CXX_STANDARD 11)
SET(CMAKE_BUILD_TYPE "Debug")
FIND_PACKAGE(fmt)

set(SOURCE_DIR ${CMAKE_CURRENT_SOURCE_DIR})
INCLUDE_DIRECTORIES(${SOURCE_DIR}/include)
FILE(GLOB TN_SRC_FILES ${SOURCE_DIR}/src/dist.cpp)

SET(BUILD_BINARY_PREFIX "main")
ADD_EXECUTABLE(${BUILD_BINARY_PREFIX} ${TN_SRC_FILES} src/main.cpp)
TARGET_LINK_LIBRARIES(${BUILD_BINARY_PREFIX} PRIVATE ${LIBRARIES} fmt::fmt)
